package org.bsbo.dao.impl;

import org.bsbo.dao.TaskDao;
import org.bsbo.domain.Task;

public class TaskDaoImpl implements TaskDao {
    @Override
    public Task findById(long id) {
        return null;
    }
}
