package org.bsbo.domain;

public class TaskStatus {
}
